# paimon-cli

./: .gitignore  config.py  core.py  main.py  prompts.py  pyproject.toml  readme.md  requirements.txt
paimon_cli/: __init__.py  ai_client.py  cli.py  config.py  core.py  prompt.json  prompts.py  ui.py
