[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paimon-cli"
version = "0.1.0"
description = "Paimon - Your friendly CTF companion CLI tool"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests",
    "colorama",
]
requires-python = ">=3.8"

[project.scripts]
paimon-cli = "paimon_cli.core:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["paimon_cli*"]